# qtrvsim

./: .clang-format  .dev-config.local.mk  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  azure-pipelines.yml  build-macos.sh  build.sh  default.nix  instructions.md  prepare-release  qtlogging.ini  qtmips.pro  qtmips.spec  qtrvsim.spec
benchmarks/: CMakeLists.txt  component_benchmark.cpp  gui_benchmark.cpp
src/assembler/: CMakeLists.txt  assembler.pro  fixmatheval.cpp  fixmatheval.h  messagetype.h  simpleasm.cpp  simpleasm.h
src/cli/: CMakeLists.txt  chariohandler.cpp  chariohandler.h  cli.pro  climain.cpp  climain.h  main.cpp  msgreport.cpp  msgreport.h  reporter.cpp  reporter.h  tracer.cpp  tracer.h  utilandtext.cpp  utilandtext.h
src/common/: CMakeLists.txt  endian.h  logging.h  logging_format_colors.h  memory_ownership.h  string_utils.h
src/common/containers/: cvector.h  lookuptable.h
src/common/containers/constexpr/: carray.h  cstring.h  cvector.h
src/common/math/: bit_ops.h
src/common/polyfills/: CMakeLists.txt  byteswap.h  clz32.h  endian_detection.h  mulh64.h  mulh64.test.cpp  mulh64.test.h  qstring_hash.h
src/common/polyfills/qt5/: qfontmetrics.h  qlinef.h  qtableview.h  qtest.h
src/common/type_utils/: lens.h
src/debuginfo/: CMakeLists.txt  debuginfo.cpp  debuginfo.h  debuginfo.test.cpp  debuginfo.test.h
src/gui/: CMakeLists.txt  MainWindow.ui  NewDialog.ui  aboutdialog.cpp  aboutdialog.h  cachedock.cpp  cachedock.h  cacheview.cpp  cacheview.h  cop0dock.cpp  cop0dock.h  core.qrc  coreview.cpp  coreview.h  csrdock.cpp  csrdock.h  extprocess.cpp  extprocess.h  fontsize.cpp  graphicsview.cpp  graphicsview.h  gui.pro  hexlineedit.cpp  hexlineedit.h  highlighterasm.cpp  highlighterasm.h  hinttabledelegate.cpp  hinttabledelegate.h  icons.qrc  lcddisplaydock.h  main.cpp  mainwindow.cpp  mainwindow.h  memorydock.cpp  memorydock.h  memorymodel.cpp  memorymodel.h  memorytableview.cpp  memorytableview.h  messagesdock.cpp  (+29 more)
src/gui/coreview/: adder.cpp  adder.h  alu.cpp  alu.h  and.cpp  and.h  connection.cpp  connection.h  constant.cpp  constant.h  coreview_colors.h  data.h  instructionview.cpp  instructionview.h  junction.cpp  junction.h  latch.cpp  latch.h  logicblock.cpp  logicblock.h  memory.cpp  memory.h  minimux.cpp  minimux.h  multiplexer.cpp  multiplexer.h  multitext.cpp  multitext.h  programcounter.cpp  programcounter.h  registers.cpp  registers.h  scene.cpp  scene.h  value.cpp  value.h  value_handlers.cpp  value_handlers.h
src/gui/coreview/components/: numeric_value.cpp  numeric_value.h  value_handlers.cpp  value_handlers.h
src/gui/coreview/deprecated/: connection.cpp  connection.h  instructionview.cpp  instructionview.h  logicblock.cpp  logicblock.h  memory.cpp  memory.h  minimux.cpp  minimux.h  multiplexer.cpp  multiplexer.h  multitext.h  programcounter.cpp  programcounter.h  registers.cpp  registers.h  value.cpp  value.h
src/gui/dialogs/about/: aboutdialog.cpp  aboutdialog.h
src/gui/dialogs/gotosymbol/: gotosymboldialog.cpp  gotosymboldialog.h
src/gui/dialogs/new/: NewDialog.ui  NewDialogCache.ui  bigslider.cpp  bigslider.h  newdialog.cpp  newdialog.h
src/gui/dialogs/savechanged/: savechangeddialog.cpp  savechangeddialog.h
src/gui/dialogs/webeval/: webevalconfigdialog.cpp  webevalconfigdialog.h
src/gui/helper/: async_modal.h
src/gui/mainwindow/: MainWindow.ui  assembler_gui_integration.cpp  assembler_gui_integration.h  mainwindow.cpp  mainwindow.h
src/gui/resources/icons/: icons.qrc
src/gui/resources/samples/: samples.qrc  template-os.S  template.S
src/gui/samples/: cop0-test-ia.S  simple-lw-sw-ia.S  template-os.S  template.S
src/gui/ui/: hexlineedit.cpp  hexlineedit.h  pow2spinbox.cpp  pow2spinbox.h
src/gui/widgets/: HidingTabWidget.cpp  HidingTabWidget.h  hidingtabwidget.cpp  hidingtabwidget.h
src/gui/windows/cache/: cachedock.cpp  cachedock.h  cacheview.cpp  cacheview.h
src/gui/windows/coreview/: data.h  scene.cpp  scene.h
src/gui/windows/csr/: csrdock.cpp  csrdock.h
src/gui/windows/editor/: editordock.cpp  editordock.h  editortab.cpp  editortab.h  highlighterasm.cpp  highlighterc.cpp  highlighterc.h  linenumberarea.cpp  linenumberarea.h  srceditor.cpp  srceditor.h
src/gui/windows/lcd/: lcddisplaydock.cpp  (+3 more)
src/machine/: CMakeLists.txt  alu.cpp  alu.h  bitfield.h  config_isa.h  controlstate.cpp  controlstate.h  cop0state.cpp  cop0state.h  core.cpp  core.h  core.test.cpp  core.test.h  instruction.cpp  instruction.h  instruction.test.cpp  instruction.test.data.def  instruction.test.data.h  instruction.test.gendata.cpp  instruction.test.gendata.h  instruction.test.h  machine.cpp  machine.h  machine.pro  machine.test.cpp  machine_global.h  machineconfig.cpp  machineconfig.h  machineconfig.test.cpp  machinedefs.h  pipeline.h  predictor.cpp  predictor.h  predictor_types.h  programloader.cpp  programloader.h  programloader.test.cpp  programloader.test.h  register_value.h  registers.cpp  (+8 more)
src/machine/core/: core_state.h
src/machine/csr/: address.h  controlstate.cpp  controlstate.h  register_desc.h
src/machine/execute/: alu.cpp  alu.h  alu.test.cpp  alu.test.h  alu_op.h  mul_op.h
src/machine/instruction/: argument_desc.h  bit_arg.h  instruction_flags.h
src/machine/memory/: address.h  address_range.h  address_with_mode.h  endian.h  frontend_memory.cpp  frontend_memory.h  memory_bus.cpp  memory_bus.h  memory_utils.h  page_table_walker.cpp  page_table_walker.h  sv32.h  tlb.cpp  tlb.h  virtual_address.h
src/machine/tests/: testalu.cpp  testcache.cpp  testcore.cpp  testinstruction.cpp  testmemory.cpp  testprogramloader.cpp  testregisters.cpp  tests.pro  tst_machine.cpp  tst_machine.h
src/os_emulation/: CMakeLists.txt  os_emulation.pro  ossyscall.cpp  ossyscall.h  posix_polyfill.h  syscall_nr.h  syscallent.h  target_errno.h
src/svgscene/: CMakeLists.txt
src/svgscene/src/: groupitem.cpp  groupitem.h  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simpletextitem.cpp  simpletextitem.h  svggraphicsview.cpp  svggraphicsview.h  svghandler.cpp  svghandler.h  types.cpp  types.h
(+506 files in other folders)
